--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-markdown": "^9.0.1",
     "react-resizable-panels": "^2.0.9",
     "react-syntax-highlighter": "^15.5.0",
+    "remark-gfm": "^4.0.0",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
     "use-debounce": "^10.0.0",
