--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
     "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "lucide-react": "^0.330.0",
     "next": "14.1.0",
+    "next-auth": "^5.0.0-beta.11",
     "next-themes": "^0.2.1",
     "react": "^18",
     "react-dom": "^18",
@@ -30,9 +32,12 @@
     "tailwindcss-animate": "^1.0.7",
     "use-debounce": "^10.0.0",
     "use-debounced": "^1.1.0",
+    "zod": "^3.22.4",
     "zustand": "^4.5.0"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
+    "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
