started working on email verification

--- a/package.json
+++ b/package.json
@@ -29,10 +29,12 @@
     "react-resizable-panels": "^2.0.9",
     "react-syntax-highlighter": "^15.5.0",
     "remark-gfm": "^4.0.0",
+    "resend": "^3.2.0",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
     "use-debounce": "^10.0.0",
     "use-debounced": "^1.1.0",
+    "uuid": "^9.0.1",
     "zod": "^3.22.4",
     "zustand": "^4.5.0"
   },
@@ -42,6 +44,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/uuid": "^9.0.8",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
