--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "email": "email dev"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^1.4.0",
@@ -15,6 +16,7 @@
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
+    "@react-email/components": "0.0.14",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
@@ -25,8 +27,10 @@
     "next-themes": "^0.2.1",
     "react": "^18",
     "react-dom": "^18",
+    "react-email": "^2.0.0",
     "react-markdown": "^9.0.1",
     "react-resizable-panels": "^2.0.9",
+    "react-spinners": "^0.13.8",
     "react-syntax-highlighter": "^15.5.0",
     "remark-gfm": "^4.0.0",
     "resend": "^3.2.0",
